really fix the tooltip flicker bug

--- a/src/org/ramadda/repository/htdocs/display/display.css
+++ b/src/org/ramadda/repository/htdocs/display/display.css
@@ -5,9 +5,10 @@
 }
 
 
-//To stop the flickering tooltip in google charts
-div.google-visualization-tooltip { pointer-events: none }
-
+/* fixes the tooltip clicker bug */
+.google-visualization-tooltip {
+    pointer-events: none;
+}
 
 .display-tooltip {
     max-width:600px;
@@ -226,18 +227,14 @@ position:absolute;
 }
 
 .display-correlation-heading-top {
-//    background-color: #efefef;
     height:100%;
     vertical-align: bottom;
     font-weight: bold;
     padding-left: 2px;
     padding-right: 2px;
     border: 0px #ccc solid;
-//    width:120px;
-//    max-width:120px;
     max-width:100%;
     overflow-x:auto;
-//   white-space:nowrap;
 }
 
 
@@ -445,7 +442,6 @@ position:absolute;
     margin-right:2px;
     border:1px #ccc solid; 
     background-color: #efefef;
-//    z-index: 0;
 }
 
 .display-dialog-button:hover {
@@ -529,8 +525,6 @@ position:absolute;
 
 
 .display-dialog .ui-tabs {
-//     background:red;
-
 }
 
 .display-dialog .ui-tabs-panel {
@@ -549,23 +543,13 @@ position:absolute;
 
 .display-typelist-category {
    font-weight: bold;
-//   padding-bottom:3px; 
-//   padding-top:3px; 
-//   margin-top: 5px;
    background-color: #efefef;
    border-top: 1px #aaa solid;
-//   border-bottom: 1px #ccc dotted;
-//   margin-bottom: 4px;
 }
 
 
 
 .display-typelist-type {
-//   padding-bottom:3px; 
-//   padding-top:3px; 
- //   min-height: 16px; 
-//   margin-left:10px;  
-//   padding-left: 20px;
 }
 
 .display-text {
@@ -605,8 +589,6 @@ padding:4px;
 .display-title {
    font-weight:600;
    font-family: Helvetica Neue, Arial, Helvetica, sans-serif;
-//   font-weight: bold; 
-//   white-space:nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
 }
@@ -629,7 +611,6 @@ color: #000;
 }
 
 .display-animation-button {
-//    background-color:  #fff;
     margin-left:4px;
     margin-right:4px;
     margin: 1px;
@@ -699,11 +680,6 @@ color: #000;
 }
 
 
-//Each of the below are of the form:
-//.display-<display type> {
-//}
-//.display-<display type>-inner {
-//}
 
 .display-contents {
   text-align:left;
@@ -743,7 +719,6 @@ height:100%;
 .display-text-input {
    display: none;
    position:absolute;   
-//   z-index: 0;
 }
 
 
@@ -845,15 +820,10 @@ height:100%;
 
 .display-entry-popup {
    display: none;
-//   left:-10000px; 
-//   z-index: 5000;
    border-top : 1px #888 solid;
    border-bottom : 1px #888 solid;
    padding: 5px;
    background-color : #fff;
-//   position:absolute;   
-//   min-width: 200px;
-//   max-width: 400px;
 }
 
 
@@ -920,8 +890,6 @@ height:100%;
 .display-metadata-table-cell {
      border:1px #888 solid;
      padding: 0px;
-//     padding: 2px;
-//     padding-left: 10px;
 }
 
 .display-metadata-table-cell-contents {
@@ -965,7 +933,6 @@ height:100%;
    min-height: 200px;
    overflow-y: auto;
    max-height: 300px;
-//   margin: 4px;
 }
 
 
@@ -1025,7 +992,6 @@ height:100%;
 .display-entrylist-entry {
    padding:0px;
    margin: 0px;
-//   border-bottom: 1px #ccc solid;
    cursor:pointer;
 }
 
@@ -1050,11 +1016,8 @@ height:100%;
 
 
 .display-entrylist-entry-main-selected {
-//   border-top: 1px #000 solid;
-//   border-left: 1px #000 solid;
    background: #ccccff;
    border-bottom: 1px #000 dotted;
-//   border: 1px #000 dotted;
 }
 
 .display-entrylist-entry-main-selected:hover {
@@ -1091,28 +1054,16 @@ height:100%;
 
 
 .display-entry-toolbar {
-//   display: none;
-//   z-index: 10000;
-//   left:-10000px; 
-//   position: absolute;
    margin:0px;
    padding: 0px;
-//   padding-left:5px;
-//   padding-right:5px;
-//   background: #e6e6e6;
    vertical-align: center;
-//   margin:10px;
-//   height: 90%;
 }
 
 .display-entry-toolbar img {
-//   border: 1px transparent solid;
 }
 
 
 .display-entry-toolbar img {
-//   width: 20px;
-//height: 18px;
 }
 
 
@@ -1149,23 +1100,19 @@ height:100%;
 }
 
 .display-map-latlon {
-//    margin-top: 3px;
 }
 
 
 .display-linechart .display-barchart   {
     border: 1px #ccc solid;
-//    min-height:150px;
 }
 
 .display-linechart-inner .display-barchart-inner  {
-//    min-height:150px;
 }
 
 
 
 .display-header {
-//   margin-left:10px;
    margin-top:10px;
    font-weight: bold; 
 }
@@ -1211,8 +1158,6 @@ height:100%;
    padding-bottom:4px;
    min-width: 250px; 
    max-width: 500px; 
-
-//   border-bottom: 1px #ccc solid;
    overflow-y: auto;
    max-height: 200px;
 }
@@ -1266,10 +1211,7 @@ height:100%;
 
 .display-shell-input {
   margin-top: 5px;
-//   overflow-x: auto;
-//   overflow-y: auto;
-//   max-height: 600px;
-   width: 400px;
+  width: 400px;
   border : 1px #888 solid;
 }
 
@@ -1280,9 +1222,6 @@ height:100%;
 
 
 .display-shell-result {
-//   overflow-x: auto;
-//   overflow-y: auto;
-//   max-height: 600px;
      padding-left:5px;
      padding-right:5px;
      padding-top:2px;
@@ -1451,15 +1390,11 @@ color:rgb(63, 127, 95);
     border:1px #eee solid;
     border-top:1px #ccc solid;
     background:rgb(250,250,250);
-//background:#fdf6e3;
-//    height: 400px;
-//    max-height: 400px;
     overflow-y:auto;
 }
 
 
 .display-notebook-menu .ramadda-link {
-//   width: 100%;
 }
 .display-notebook-input:focus {
     border:1px #888 solid;
@@ -1735,7 +1670,6 @@ margin:10px;
 }
 
 .display-topfields-selected {
-//    border:1px solid #ccc;
     background:#efefef;
 }
 
